Tue Aug 24 00:35:49 1993  Gray Watson  (gray at toaster.antaire.com)

	* Releasing version 1.3.1.  Uploaded to the ftp site.

	* Added log-ra token to log specific information about non-freed
	memory with only return-address information.

	* Added the beginnings of return-address handling via feedback
	from Dave Hill.  Need to resolve some XXX sections in chunk and
	get more architecture/compiler hacks in return.h.  Along the way
	had to change the malloc_examine() arguments to add ret_attr.

	* Added -L or --list to malloc_dbg to list all the rc-file tags.

	* Fixed some problems in chunk.c via Dave Hill's feedback and
	renamed malloc_str.[ch] to be arg_check.[ch].

Tue Aug 17 16:22:20 1993  Gray Watson  (gray at toaster.antaire.com)

	* Releasing version 1.3.0.

	* Fixed some ansi compiler problems via patch from Manfred
	Hauswirth.

Thu Aug 12 18:11:01 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added MALLOC_TRACE variable and malloc_dbg -t functionality for
	tracing an address and logging messages about it.

Tue Aug 10 16:43:07 1993  Gray Watson  (gray at toaster.antaire.com)

	* Made some minor fixes via feedback from Marc Evans.

Mon Jul 26 05:50:27 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added some C++ from Peter Miller to the manual.

Fri Jul 23 01:36:09 1993  Gray Watson  (gray at toaster.antaire.com)

	* Removed LGPL copyright and put in its place fully free
	software notices.

Thu Jul 22 17:35:23 1993  Gray Watson  (gray at toaster.antaire.com)

	* _malloc_perror renamed to _malloc_error and made some other
	minor changes.

Tue Jul 20 01:52:02 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added smallest_block runtime calculations.

Mon Jul 19 12:20:58 1993  Gray Watson  (gray at toaster.antaire.com)

	* Made malloc_address exported per Dave Hill's comments so it
	can be setable by debugger at runtime.

	* Added Dave Hill's idea of auto-sensing of shell by malloc_dbg.
	Also added -C option to malloc_dbg to force cshell output.