@@ -1,5 +1,5 @@
 -------------------------------------------------------------------------------
-$Id: NOTES,v 1.19 1993/08/24 22:24:03 gray Exp $
+$Id: NOTES,v 1.20 1993/08/26 23:08:53 gray Exp $
 -------------------------------------------------------------------------------
 
 WARNINGS:
@@ -28,6 +28,11 @@ WARNINGS:
 	the _next arguments which are usually unioned with the file
 	args to see if the slot is on the free list or not.  See the
 	2 XXX sections for specifics
+
+-	incorrect formats passed in from environment variable
+	MALLOC_LOGFILE will cause core dumps because it is passed
+	through sprintf.  This may or may not be a security hole.
+	Recommendations on better ways of achieving this?
 
 -------------------------------------------------------------------------------
 
