@@ -18,7 +18,7 @@
  *
  * The author of the program may be contacted at gray.watson@antaire.com
  *
- * $Id: compat.h,v 1.12 1993/07/23 21:24:18 gray Exp $
+ * $Id: compat.h,v 1.13 1993/08/26 23:08:56 gray Exp $
  */
 
 #ifndef __COMPAT_H__
@@ -30,58 +30,65 @@
 /*<<<<<<<<<<  The below prototypes are auto-generated by fillproto */
 
 /*
+ * return a fake pid for brain-dead systems without getpid()
+ */
+#if HAVE_GETPID == 0
+IMPORT	int	getpid(void);
+#endif
+
+/*
  * copy LEN characters from FROM to TO
  */
-#ifndef HAVE_MEMCPY
+#if HAVE_MEMCPY == 0 && HAVE_BCOPY == 0
 IMPORT	char	*memcpy(char * to, const char * from, MALLOC_SIZE len);
 #endif
 
 /*
  * compare LEN characters, return -1,0,1 if STR1 is <,==,> STR2
  */
-#ifndef HAVE_MEMCMP
+#if HAVE_MEMCMP == 0 && HAVE_BCMP == 0
 IMPORT	int	memcmp(const char * str1, const char * str2, MALLOC_SIZE len);
 #endif
 
 /*
  * set LEN characters in STR to character CH
  */
-#ifndef HAVE_MEMSET
+#if HAVE_MEMSET == 0
 IMPORT	char	*memset(char * str, int ch, MALLOC_SIZE len);
 #endif
 
 /*
  * find CH in STR by searching backwards through the string
  */
-#ifndef HAVE_INDEX
+#if HAVE_INDEX == 0
 IMPORT	char	*index(const char * str, int ch);
 #endif
 
 /*
  * find CH in STR by searching backwards through the string
  */
-#ifndef HAVE_RINDEX
+#if HAVE_RINDEX == 0
 IMPORT	char	*rindex(const char * str, int ch);
 #endif
 
 /*
  * concatenate STR2 onto the end of STR1
  */
-#ifndef HAVE_STRCAT
+#if HAVE_STRCAT == 0
 IMPORT	char	*strcat(char * str1, const char * str2);
 #endif
 
 /*
  * returns -1,0,1 on whether STR1 is <,==,> STR2
  */
-#ifndef HAVE_STRCMP
+#if HAVE_STRCMP == 0
 IMPORT	int	strcmp(const char * str1, const char * str2);
 #endif
 
 /*
  * return the length in characters of STR
  */
-#ifndef HAVE_STRLEN
+#if HAVE_STRLEN == 0
 IMPORT	MALLOC_SIZE	strlen(const char * str);
 #endif
 
@@ -90,7 +97,7 @@ IMPORT	MALLOC_SIZE	strlen(const char * str);
  * tokens are a list of characters deliminated by a character from DELIM.
  * writes null into STR to end token.
  */
-#ifndef HAVE_STRTOK
+#if HAVE_STRTOK == 0
 IMPORT	char	*strtok(char * str, char * delim);
 #endif
 
